@@ -1,6 +1,9 @@
 # ChangeLog for dev-php4/pecl-json
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php4/pecl-json/Attic/ChangeLog,v 1.1 2006/04/27 20:41:20 chtekk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php4/pecl-json/Attic/ChangeLog,v 1.2 2006/11/23 00:38:51 tomk Exp $
+
+  23 Nov 2006; Tom Knight <tomk@gentoo.org> pecl-json-1.2.1.ebuild:
+  Added ~amd64 KEYWORD, fixes bug #155072
 
 *pecl-json-1.2.1 (27 Apr 2006)
 
